--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     This app needs JavaScript. Please enable JavaScript to continue.
   </noscript>
   <div id="app"></div>
-  <script src="/js/compiled/app.js"></script>
+  <script src="js/compiled/app.js"></script>
 </body>
 
 </html>
