--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
   <noscript>
     This app needs JavaScript. Please enable JavaScript to continue.
   </noscript>
-  <div id="app"></div>
+  <div class="vh-100 ph3 ph5-ns pv5 bg-blue" id="app"></div>
   <script src="/js/compiled/app.js"></script>
 </body>
-
 </html>
+
+
